--- a/style.css
+++ b/style.css
@@ -15664,6 +15664,21 @@ color: #415d96;
   margin-bottom: 20px;
   color: #fff;
 }
+@media(min-width:320px){
+  .rs-breadcrumbs-contact  .breadcrumbs-text .page-title{
+    font-size:28px;
+  }
+}
+@media(min-width:690px){
+  .rs-breadcrumbs-contact  .breadcrumbs-text .page-title{
+    font-size:44px;
+  }
+}
+@media(min-width:1020px){
+  .rs-breadcrumbs-contact  .breadcrumbs-text .page-title{
+    font-size:48px;
+  }
+}
 .rs-breadcrumbs-contact  .breadcrumbs-text ul {
   padding: 0;
 }
@@ -16356,7 +16371,7 @@ background: #3b4c77;
 }
 @media(min-width:320px){
   .page-title1 {
-    padding-top: 24px;
+    padding-top: 0px;
     font-size: 20px;
     margin-left: 143px;
 }
@@ -16380,7 +16395,7 @@ background: #3b4c77;
 }
 @media(min-width:320px){
   .page-title2 {
-    padding-top: 24px;
+    padding-top: 5px;
     font-size: 15px;
     margin-left: 143px;
 }
@@ -16557,8 +16572,8 @@ background: #3b4c77;
    }
 @media (min-width:320px){
   .page-title3{
-    font-size:20px;
-    padding-right:100px;
+    font-size:14px;
+    padding-right:140px;
   }
 }
 @media (min-width:690px){
@@ -16655,5 +16670,35 @@ background: #3b4c77;
   .desc{
     margin-bottom:0px;
   }
+}
+
+
+.page-title5{
+  font-size: 48px;
+  color: white;
+  text-align:left;
+  padding-left:70px;
+}
+@media(min-width:320px){
+  .page-title5{
+    font-size:14px;
+    padding-left:40px;
+  }
+}
+@media(min-width:690px){
+  .page-title5{
+    font-size:14px;
+    padding-left:30px;
+  }
+}
+@media(min-width:1020px){
+  .page-title5{
+    font-size:48px;
+    padding-left:70px;
+  }
+}
+.rs-breadcrumbs .view ul{
+  text-align: left;
+  padding-left:40px;
 }
 /*********************end*************************************/
